plugins {
	id 'java-library'
	id 'eclipse'
	id 'idea'
	id 'maven-publish'
}

repositories {
	mavenCentral()
	maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
	maven {	url "https://s01.oss.sonatype.org/content/repositories/snapshots" }
	
}

ext.junitPlatformVersion = '1.8.2'
ext.junitJupiterVersion = '5.8.2'

ext.jqwikVersion = '1.7.0'

sourceCompatibility = 8
targetCompatibility = 8

compileTestJava {
    // To enable argument names in reporting and debugging
	options.compilerArgs += '-parameters'
}

jar {
    manifest {
        attributes 'Implementation-Title': 'act-pbt',
                   'Implementation-Version': archiveVersion
	}
}

dependencies {
	api(project(':act-statemachine'))
	api "net.jqwik:jqwik:${jqwikVersion}"
	
	testImplementation "org.assertj:assertj-core:3.12.2"
	testImplementation "org.junit.platform:junit-platform-suite-engine:${junitPlatformVersion}"
	testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
}

tasks.named('test') {
	useJUnitPlatform {
		includeEngines 'jqwik', 'junit-jupiter'
	}
}

tasks.named('test') {
    useJUnitPlatform()
}

task javadocJar(type: Jar) {
	classifier = 'javadoc'
	from javadoc
}

task sourcesJar(type: Jar) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

artifacts {
	archives javadocJar, sourcesJar
}

if (project.hasProperty("signing.keyId")) {
	apply plugin: 'signing'

	signing {
	    sign configurations.archives
	}

	publishing {
		publications {
			mavenJava(MavenPublication) {
				pom{
					name = 'act-pbt'
					description = 'Property based testing for act statemachines.'
					url = 'http://requirementsascode.org/'
					packaging = 'jar'

					from components.java

      				artifact javadocJar {
						classifier "javadoc"
      				}

					artifact sourcesJar {
						classifier "sources"
      				}

					licenses {
						license {
							name = 'The Apache Software License, Version 2.0'
							url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
						}
					}

					developers {
						developer {
							id = 'bertilmuth'
							name = 'Bertil Muth'
						}
					}

					scm {
						url = 'scm:git@github.com:bertilmuth/requirementsascode.git'
						connection = 'scm:git@github.com:bertilmuth/requirementsascode.git'
						developerConnection = 'scm:git@github.com:bertilmuth/requirementsascode.git'
					}
				}
			}
		}

		repositories {
			maven {
				credentials {
					username sonatypeUsername
					password sonatypePassword
				}

				def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
				def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
				url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
			}
		}
	}

	signing {
		sign publishing.publications.mavenJava
	}
}
